# Jupiter

./: .gitignore  README.md  Verteilungssicht.drawio  chatbox.js  example.db  main.js  ragpy.py  scrip1.js  script2.js  style.css  testserver.py
rust-server/: .dockerignore  Cargo.toml  Dockerfile  README.md  linux_setup.sh  prompts.db  python_dependencies.txt  setup.sh  start.sh  todo.md  windows_setup.bat
rust-server/.cargo/: config.toml
rust-server/chroma/: chroma.sqlite3
rust-server/scripts/python/: call_ai.py  call_test.py  embedding.py  execute_event_storming_query.py  execute_rag_query.py  execute_vector_query.py  initialize_vectorestore.py  keinplan.py  query.py  rag_query.py  ragpy.py  setup.py  start_server.py  storming.py  test_client.py  vectorstore.py
rust-server/scripts/python/ai/: call_ai.py  run_rag.py  setup.py  start_server.py  storming.py  test_client.py  vector_query.py
rust-server/scripts/python/lib/: constants.py  database_handlers.py  embedding.py  env.py  request_handlers.py
rust-server/scripts/python/python_tests/: test_client.py
rust-server/src/: config.rs  lib.rs  main.rs
rust-server/src/handlers/: ai.rs  db.rs  mod.rs  router.rs
rust-server/src/handlers/ai/: ai.rs  (+5 more)
rust-server/src/models/: database.rs  mod.rs  python_ai.rs  routes_data.rs
rust-server/src/utils/: mod.rs  postgres.rs  python.rs  sqlite.rs
rust-server/tests/: ai_tests.rs  config_tests.rs  db_tests.rs  postgres_tests.rs  python_tests.rs  route_eventstorming_tests.rs  route_prompt_tests.rs  route_rating_tests.rs  route_regenerate_tests.rs  sqlite_tests.rs
(+174 files in other folders)
