[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
dotenv = "0.15.0"
tower-http = { version = "0.5", features = ["timeout", "trace", "cors"] }
tower = { version = "0.4", features = ["util"] }

[lib]
name = "rust_server"
path = "src/lib.rs"

[[bin]]
name = "rust_server_bin"
path = "src/main.rs"